--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "next dev --webpack",
+    "build": "next build --webpack",
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
@@ -16,12 +16,12 @@
     "@types/qrcode": "^1.5.6",
     "framer-motion": "^12.29.2",
     "leaflet": "^1.9.4",
-    "next": "^14.2.23",
+    "next": "^16.1.6",
     "papaparse": "^5.5.3",
     "pptxgenjs": "^4.0.1",
     "qrcode": "^1.5.4",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-leaflet": "^4.2.1",
     "recharts": "^3.7.0",
     "zod": "^3.24.1",
@@ -37,7 +37,7 @@
     "@types/react-dom": "^18.3.5",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.1",
-    "eslint-config-next": "14.2.23",
+    "eslint-config-next": "^16.1.6",
     "jest": "^29.7.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
